# CS191-Project

./: .gitignore  README.md  cdk.context.json  container_details.md  deploy.sh  hello.py  notes.md  requirements.txt  setup_mongo.sh
.github/workflows/: cdk-deploy-action.yaml  cdk-destroy-action.yaml
api_functions/: hello.py  jwt_verification.py  login_handlers.py  main_account.py  register_login.py  sub_account.py  test_post.py  user_account.py
buzzy_bee_db/: pyproject.toml
buzzy_bee_db/src/buzzy_bee_db/: db_response.py
buzzy_bee_db/src/buzzy_bee_db/account/: account_response.py  login.py  register.py  sub_account.py
cdk/: app.py
cdk.out/: CdkStack.assets.json  CdkStack.template.json  manifest.json  tree.json
cdk.out/asset.36b8f41f6da3a5bb52754dad62501d90ef22560fafeb311478adb035c34aa34b/: app.py
cdk.out/asset.483581151f79555aabd228e4f597413dc717279a85a74a86126477277796800f/: Dockerfile  app.py
cdk.out/asset.b844479a129b0305d2afc413c2fc4dd0455b4840bd2b4d9db18637a1e6c02547/: docker-compose.yml
cdk/cdk/: cdk_stack.py
db_functions/account/: account_response.py  login.py  register.py  sub_accounts.py
flask_docker/: Dockerfile  app.py  docker-compose.yml  requirements.txt
flask_docker/buzzy_bee_db/: pyproject.toml
flask_docker/flask_blueprints/: beedle.py  classes.py  login_register.py  math.py  math_funcs.py  spelling.py  writing.py  (+1 more)
frontend/: index.html
lambdas/:  weekly_snapshot.html  email_handler.py  email_html.py  email_init_lambda.py  verification_lambda.py  weekly_snapshot.html
mongo_public/: app.py
test_docker/: Dockerfile  app.py
(+91 files in other folders)
